opam-version: "2.0"
name: "tokenizers"
maintainer: "Jay Mody <jaykmody@gmail.com>"
authors: "Jay Mody <jaykmody@gmail.com>"
synopsis: "Transformer tokenizers in OCaml"
license: "MIT"
homepage: "https://github.com/jaymody/ocaml-tokenizers"
bug-reports: "https://github.com/jaymody/ocaml-tokenizers/issues"
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
    "ocaml"
    "dune"
    "batteries"
    "yojson"
    "re"
    "algos"
    # Dev Dependencies
    #
    # I'm using with-test for dev dependencies as the with-dev-setup option
    # is only available in opam 2.2.0, which is in alpha
    "ocaml-lsp-server" { with-test }
    "ocamlformat" { with-test }
    "utop" { with-test }
]
pin-depends: [
    [ "algos.dev" "git+https://github.com/jaymody/ocaml-algos.git" ]
]
