opam-version: "2.0"
name: "tokenizers"
maintainer: "Jay Mody <jaykmody@gmail.com>"
authors: "Jay Mody <jaykmody@gmail.com>"
synopsis: "Transformer tokenizers in OCaml"
license: "MIT"
homepage: "https://github.com/jaymody/ocaml-tokenizers"
bug-reports: "https://github.com/jaymody/ocaml-tokenizers/issues"
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
    "ocaml"
    "dune"
    "core"
    "yojson"
    "ppx_jane"
    "ocaml-lsp-server" { with-dev-setup }
    "ocamlformat" { with-dev-setup }
    "utop" { with-dev-setup }
]
